content/bootstrap/5.3/components/breadcrumb.md
---
weight: 4
linkTitle: Breadcrumb
title: El componente Breadcrumb de Bootstrap · Bootstrap en Español v5.3
description: Indica la ubicación de la página actual dentro de una jerarquía de navegación que agrega automáticamente separadores mediante CSS.
---

# El componente Breadcrumb de Bootstrap

Indica la ubicación de la página actual dentro de una jerarquía de navegación que agrega automáticamente separadores mediante CSS.

{{< content-ads/top-banner >}}

Ejemplo del componente Breadcrumb {#example}
-------------------

Usa una lista ordenada o desordenada con elementos de lista vinculados para crear una ruta de navegación con un estilo mínimo. Utiliza nuestras utilidades para agregar estilos adicionales según lo desees.

{{< demo-iframe path="/demos/bootstrap/5.3/components/breadcrumb/example.html" >}}
```html {filename="HTML"}
    <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
            <li class="breadcrumb-item active" aria-current="page">Inicio</li>
        </ol>
    </nav>

    <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
            <li class="breadcrumb-item"><a href="#">Inicio</a></li>
            <li class="breadcrumb-item active" aria-current="page">Biblioteca</li>
        </ol>
    </nav>

    <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
            <li class="breadcrumb-item"><a href="#">Inicio</a></li>
            <li class="breadcrumb-item"><a href="#">Biblioteca</a></li>
            <li class="breadcrumb-item active" aria-current="page">Datos</li>
        </ol>
    </nav>
```
{{< /demo-iframe >}}

Divisores entre elementos del Breadcrumb {#dividers}
----------------------

{{< content-ads/middle-banner-1 >}}

Los divisores se agregan automáticamente en CSS a través de [`::before`](https://developer.mozilla.org/en-US/docs/Web/CSS/::before) y [`content`](https://developer.mozilla.org/en-US/docs/Web/CSS/content). Se pueden cambiar modificando una propiedad personalizada CSS local `--bs-breadcrumb-divider`, o mediante la variable Sass `$breadcrumb-divider` y `$breadcrumb-divider-flipped` para su contraparte RTL, si es necesario. Utilizamos de forma predeterminada nuestra variable Sass, que se establece como alternativa a la propiedad personalizada. De esta manera, obtienes un divisor global que puedes sobrescribir sin tener que volver a compilar CSS en ningún momento.

{{< demo-iframe path="/demos/bootstrap/5.3/components/breadcrumb/dividers-1.html" >}}
```html {filename="HTML"}
    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
        <ol class="breadcrumb">
            <li class="breadcrumb-item"><a href="#">Inicio</a></li>
            <li class="breadcrumb-item active" aria-current="page">Biblioteca</li>
        </ol>
    </nav>
```
{{< /demo-iframe >}}

Al modificar a través de Sass, se requiere la función [quote](https://sass-lang.com/documentation/modules/string#quote) para generar las comillas alrededor de una cadena. Por ejemplo, usando `>` como divisor, puedes usar esto:

```scss {filename="SCSS"}
$breadcrumb-divider: quote(">");
```

También es posible usar un **icono SVG incrustado**. Aplícalo a través de nuestra propiedad personalizada CSS o usa la variable Sass.

{{< callout type="info" emoji="" >}}
**El SVG incorporado requiere caracteres con escape adecuado.** Algunos caracteres reservados, como `<`, `>` y `#`, deben estar codificado en URL o con formato de escape. Hacemos esto con la variable `$breadcrumb-divider` usando nuestro [`escape-svg()` (función Sass)](/bootstrap/5.3/customize/sass/#escape-svg). Al personalizar la variable CSS, debes manejarlo tú mismo. Lee las [explicaciones de Kevin Weber sobre CodePen](https://codepen.io/kevinweber/pen/dXWoRw) para obtener más información.
{{< /callout >}}

{{< demo-iframe path="/demos/bootstrap/5.3/components/breadcrumb/dividers-2.html" >}}
```html {filename="HTML"}
    <nav style="--bs-breadcrumb-divider: url(&quot;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&quot;);" aria-label="breadcrumb">
        <ol class="breadcrumb">
            <li class="breadcrumb-item"><a href="#">Inicio</a></li>
            <li class="breadcrumb-item active" aria-current="page">Biblioteca</li>
        </ol>
    </nav>
```
{{< /demo-iframe >}}

```scss {filename="SCSS"}
$breadcrumb-divider: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='8' height='8'><path d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='#{$breadcrumb-divider-color}'/></svg>");
```

{{< content-ads/middle-banner-2 >}}

También puedes eliminar la configuración del divisor `--bs-breadcrumb-divider: '';` (las cadenas vacías en las propiedades personalizadas de CSS cuentan como un valor), o estableciendo la variable Sass en `$breadcrumb-divider: none;`.

{{< demo-iframe path="/demos/bootstrap/5.3/components/breadcrumb/dividers-3.html" >}}
```html {filename="HTML"}
    <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
        <ol class="breadcrumb">
            <li class="breadcrumb-item"><a href="#">Inicio</a></li>
            <li class="breadcrumb-item active" aria-current="page">Biblioteca</li>
        </ol>
    </nav>
```
{{< /demo-iframe >}}

```scss {filename="SCSS"}
$breadcrumb-divider: none;
```

Accesibilidad del componente Breadcrumb {#accessibility}
-------------------------------

Dado que las breadcrumbs proporcionan navegación, es una buena idea agregar una etiqueta significativa como `aria-label="breadcrumb"` para describir el tipo de navegación proporcionada en el elemento `<nav>`, además de aplicar un `aria-current="page"` al último elemento del conjunto para indicar que representa la página actual.

Para obtener más información, consulta la [Guía de prácticas de creación de breadcrumbs de ARIA](https://www.w3.org/WAI/ARIA/apg/patterns/breadcrumb).

Personalización del CSS del componente {#css}
-----------

{{< bootstrap/content-suggestion >}}

### Variables Sass del componente {#variables}

<br/>
<span class="py-1 px-3 text-green-700 border border-green-700 rounded-md">Agregado en v5.2.0</span>

Como parte del enfoque de variables CSS en evolución de Bootstrap, las rutas de navegación ahora usan variables CSS locales en `.breadcrumb` para una personalización mejorada en tiempo real. Los valores de las variables CSS se establecen a través de Sass, por lo que la personalización de Sass también es compatible.

[scss/_breadcrumb.scss](https://github.com/twbs/bootstrap/blob/v5.3.2/scss/_breadcrumb.scss)

```scss {filename="scss/_breadcrumb.scss"}
--#{$prefix}breadcrumb-padding-x: #{$breadcrumb-padding-x};
--#{$prefix}breadcrumb-padding-y: #{$breadcrumb-padding-y};
--#{$prefix}breadcrumb-margin-bottom: #{$breadcrumb-margin-bottom};
@include rfs($breadcrumb-font-size, --#{$prefix}breadcrumb-font-size);
--#{$prefix}breadcrumb-bg: #{$breadcrumb-bg};
--#{$prefix}breadcrumb-border-radius: #{$breadcrumb-border-radius};
--#{$prefix}breadcrumb-divider-color: #{$breadcrumb-divider-color};
--#{$prefix}breadcrumb-item-padding-x: #{$breadcrumb-item-padding-x};
--#{$prefix}breadcrumb-item-active-color: #{$breadcrumb-active-color};
```

### Variables Sass generales relacionadas {#sass-variables}

{{< content-ads/middle-banner-3 >}}

[scss/_variables.scss](https://github.com/twbs/bootstrap/blob/v5.3.2/scss/_variables.scss)

```scss {filename="scss/_variables.scss"}
$breadcrumb-font-size:              null;
$breadcrumb-padding-y:              0;
$breadcrumb-padding-x:              0;
$breadcrumb-item-padding-x:         .5rem;
$breadcrumb-margin-bottom:          1rem;
$breadcrumb-bg:                     null;
$breadcrumb-divider-color:          var(--#{$prefix}secondary-color);
$breadcrumb-active-color:           var(--#{$prefix}secondary-color);
$breadcrumb-divider:                quote("/");
$breadcrumb-divider-flipped:        $breadcrumb-divider;
$breadcrumb-border-radius:          null;
```

{{< content-ads/bottom-banner >}}